--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Engagement&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import "tailwindcss";
 
 @theme{
@@ -21,6 +22,9 @@ color: black;
 
 .bungee-font{
   font-family: "Bungee Shade", sans-serif;
+}
+.rubik-font{
+  font-family: "Rubik", sans-serif;
 }
 .engagement-font{
   font-family: "Engagement", cursive;
